# workmate

./: README.md  main.py  pyproject.toml
src/workmate/: cli.py  csv_reader.py  models.py  output.py  report_registry.py
src/workmate/reports/: __init__.py  base.py  clickbait.py
tests/: test_cli.py  test_csv_reader.py  test_reports.py
