[project]
name = "workmate"
version = "0.1.0"
description = "CLI for YouTube video metrics reports"
authors = [
    {name = "dilweb",email = "yxs.crevier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
workmate = "workmate.cli:main"

[tool.poetry]
packages = [{include = "workmate", from = "src"}]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
